# lillabeler

./: .gitignore  BBFinder.cpp  BBFinder.hpp  CMakeLists.txt  Export.cpp  Export.hpp  Formatter.cpp  Formatter.hpp  Import.cpp  Import.hpp  LICENSE  Lillabeler.cpp  Lillabeler.sln  README.md
Property Files/: OpenCV_Debug.props  OpenCV_Release.props
